<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Tax.TaxMain">

    <LinearLayout
        android:id="@+id/toolBarArea"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/toolbar_shape"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/li_mayukh_unicode"
            android:text="আয়কর সম্ভলিত সেবাসমূহ"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/AdSection"
        android:layout_below="@id/toolBarArea">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:elevation="8dp"
                android:padding="5dp"
                android:rowCount="4">

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardCalculateId"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/tax">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:padding="3dp"
                            android:text="@string/Calculate"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textIsSelectable="false">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardIncomeReturn"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/search">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/incomeTaxReturn"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/black">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardFAQ"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="1"
                    android:layout_column="1"
                  android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/global">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:padding="3dp"
                            android:text="@string/incomeTaxFAQ"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/black">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardIncomeTaxInfo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/information">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/incomeTaxLaws"
                            android:textAllCaps="true"
                            android:textColor="@color/black">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardEtin"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/file">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:padding="3dp"
                            android:text="@string/eTin"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/black">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardTaxZones"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/location">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/Locations"
                            android:textAllCaps="true"
                            android:textColor="@color/black">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardForms"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/vat_form">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/tax_forms"
                            android:textAllCaps="true"
                            android:textColor="@color/black">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/CardReturnVerify"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_margin="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:padding="3dp"
                            android:src="@drawable/evaluation">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/li_mayukh_unicode"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/return_verify"
                            android:textAllCaps="true"
                            android:textColor="@color/black">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </GridLayout>


        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/AdSection"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/bannerID">

        </com.google.android.gms.ads.AdView>

    </RelativeLayout>


</RelativeLayout>